<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityRegister">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="600dp"
        android:layout_height="760dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="166dp"
        android:layout_height="160dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="552dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="460dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:textColor="@color/black"
        android:hint="@string/username"
        android:textColorHint="@color/gray"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="392dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="316dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="248dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:textColor="@color/black"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="156dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>