<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.ActivityDeleteAccount">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="600dp"
        android:layout_height="760dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/background_login" />

    <Button
        android:id="@+id/bt_submitDel"
        android:layout_width="156dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="166dp"
        android:layout_height="160dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile" />

    <EditText
        android:id="@+id/et_currentPasswordDel"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="340dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_action_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_confirmPasswordDel"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="256dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_action_lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_emailForDel"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="428dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_action_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>