<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="600dp"
        android:layout_height="760dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/background_login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGoBack2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="100dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_goBack2"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/go_back"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/listOfflinePlayers"
        android:layout_width="200dp"
        android:layout_height="694dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <ListView
        android:id="@+id/listOnlinePlayers"
        android:layout_width="200dp"
        android:layout_height="694dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <TextView
        android:id="@+id/tv_offline_players"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/offline_players"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_online_players"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/online_players"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>