<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:background="@drawable/treasure_color"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="184dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_login"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient"
            android:text="@string/login"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="600dp"
        android:layout_height="760dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="160dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile"
        android:layout_marginLeft="120dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="408dp"
        android:layout_height="33dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:text="@string/no_account_yet_create_one"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="376dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_action_username"
        android:hint="@string/username_or_email"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableLeft="@drawable/ic_action_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="292dp"
        android:autofillHints="no"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_action_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableLeft="@drawable/ic_action_lock" />

</androidx.constraintlayout.widget.ConstraintLayout>