<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityStart"
    android:background="@drawable/treasure_color">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="600dp"
        android:layout_height="760dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/background_login" />

    <ImageView
        android:id="@+id/treasureMap"
        android:layout_width="343dp"
        android:layout_height="280dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/treasure_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlay"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="350dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_play"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/play"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPuzzle"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="280dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_continue"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/puzzles"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMap"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="210dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_map"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/map"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSettings"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_settings"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLeaderboard"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_leaderboard"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/leaderboard"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>