<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="600dp"
        android:layout_height="760dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/background_login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSettings"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="100dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_delete"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/delete_profile"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLeaderBoard"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="196dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_editProfile"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/edit_profile"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlay"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="288dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_play"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/play"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="166dp"
        android:layout_height="160dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile" />
</androidx.constraintlayout.widget.ConstraintLayout>